--- a/morrow-admin/pom.xml
+++ b/morrow-admin/pom.xml
@@ -16,6 +16,13 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.morrow</groupId>
+            <artifactId>morrow-common</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
